<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itachi1706.minecrafttools.ServerList$PlaceholderFragment" >

    <Button
        android:id="@+id/btnServerListAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnServerList_Add" />

    <EditText
        android:id="@+id/serverAddressAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnServerListAdd"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/toggleIs17"
        android:ems="10"
        android:hint="@string/tvServerList_Hint"
        android:inputType="textNoSuggestions|textUri" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnServerListAdd"
        android:layout_alignRight="@+id/btnServerListAdd"
        android:text="@string/server_list_tb" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:overScrollMode="ifContentScrolls" >

    </ListView>

    <ToggleButton
        android:id="@+id/toggleIs17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/serverAddressAdd"
        android:layout_alignBottom="@+id/serverAddressAdd"
        android:layout_toLeftOf="@+id/btnServerListAdd"
        android:textOff="@string/default_16"
        android:textOn="@string/default_17" />

</RelativeLayout>