<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itachi1706.minecrafttools.SingleServerChecker$PlaceholderFragment" >

    <EditText
        android:id="@+id/serverAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_SS_Info"
        android:inputType="textNoSuggestions|textUri" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/serverAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/btnSubmit" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/serverAddress"
        android:layout_below="@+id/serverAddress"
        android:text="@string/txt_SS_Info" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvInfo"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/serverAddress"
        android:layout_below="@+id/btnSubmit" />

</RelativeLayout>